# model-monitor

./: .release-please-manifest.json  Chart.yaml  Dockerfile  README.md  release-please-config.json  values.yaml
.github/workflows/: helm-release.yml  main.yaml  release-please.yaml  release.yaml
ai-vitals/: CHANGELOG.md  Cargo.toml  README.md  test-collection.json
ai-vitals/migrations/: 001_create_monitoring_results.sql
ai-vitals/src/: lib.rs  main.rs
ai-vitals/src/web/: mod.rs  ui.html
helm/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  secret.yaml
templates/: cronjob.yaml
