[package]
name = "ai-vitals"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow   = "1"
chrono   = { version = "0.4", default-features = false, features = ["clock"] }
clap     = { version = "4", features = ["derive", "env"] }
hostname = "0.4.1"
reqwest  = { version = "0.12", features = ["json", "rustls-tls"] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
tokio    = { version = "1.38", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
urlencoding = "2.1.3"
