[package]
name = "ai-vitals"
version = "0.7.0"
edition = "2024"
description = "A tool to monitor LLM endpoints and report status to Cronitor."
license = "MIT OR Apache-2.0"
homepage = "https://doubleword.ai"
repository = "https://github.com/doublewordai/model-monitor"
keywords= ["LLM", "monitoring", "Cronitor", "OpenAI"]
readme = "README.md"

[dependencies]
anyhow   = "1"
chrono   = { version = "0.4", default-features = false, features = ["clock"] }
clap     = { version = "4", features = ["derive", "env"] }
hostname = "0.4.1"
reqwest  = { version = "0.12", features = ["json", "rustls-tls"] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
tokio    = { version = "1.38", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1.3"

[dev-dependencies]
httpmock = "0.7"
tokio-test = "0.4"
