[package]
name = "ai-vitals"
version = "0.8.1"
edition = "2024"
description = "A tool to monitor LLM endpoints and report status to Cronitor."
license = "MIT OR Apache-2.0"
homepage = "https://doubleword.ai"
repository = "https://github.com/doublewordai/model-monitor"
keywords= ["LLM", "monitoring", "Cronitor", "OpenAI"]
readme = "README.md"

[features]
default = ["postgres", "web"]
postgres = ["dep:sqlx"]
web = ["postgres", "dep:axum", "dep:tower", "dep:tower-http"]

[dependencies]
anyhow   = "1"
async-trait = "0.1.89"
chrono   = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap     = { version = "4", features = ["derive", "env"] }
hostname = "0.4.1"
reqwest  = { version = "0.12", features = ["json", "rustls-tls"] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
tokio    = { version = "1.38", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1.3"

# Optional dependencies (behind feature flags)
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"], optional = true }
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }

[dev-dependencies]
httpmock = "0.7"
tempfile = "3.23"
tokio-test = "0.4"
